--- a/manifest.json
+++ b/manifest.json
@@ -1,52 +1,61 @@
 {
   "name": "APV",
   "short_name": "APV",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#D41872",
   "theme_color": "#D41872",
   "orientation": "portrait",
+  "prefer_related_applications": true,
   "icons": [
 
     {
         "src": "img/icons/Icon-72",
         "type": "image/png",
-        "sizes": "72x72"
+        "sizes": "72x72",
+        "purpose": "any maskable"
       },
       {
         "src": "img/icons/Icon-120.png",
         "type": "image/png",
-        "sizes": "120x120"
+        "sizes": "120x120",
+        "purpose": "any maskable"
       },
       {
         "src": "img/icons/Icon-128.png",
         "type": "image/png",
-        "sizes": "128x128"
+        "sizes": "128x128",
+        "purpose": "any maskable"
       },
       {
         "src": "img/icons/Icon-144.png",
         "type": "image/png",
-        "sizes": "144x144"
+        "sizes": "144x144",
+        "purpose": "any maskable"
       },
       {
         "src": "img/icons/Icon-152.png",
         "type": "image/png",
-        "sizes": "152x152"
+        "sizes": "152x152",
+        "purpose": "any maskable"
       },
       {
         "src": "img/icons/Icon-196.png",
         "type": "image/png",
-        "sizes": "196x196"
+        "sizes": "196x196",
+        "purpose": "any maskable"
       },
       {
         "src": "img/icons/Icon-256.png",
         "type": "image/png",
-        "sizes": "256x256"
+        "sizes": "256x256",
+        "purpose": "any maskable"
       },
       {
         "src": "img/icons/Icon-512.png",
         "type": "image/png",
-        "sizes": "512x512"
+        "sizes": "512x512",
+        "purpose": "any maskable"
       }  
   ]  
 }
